fix: sidenav spacing, minor padding fix

--- a/css/app.css
+++ b/css/app.css
@@ -86,8 +86,6 @@
 
   @media (min-width: 1536px) {
     padding-top: 74px;
-    padding-left: 0rem;
-    padding-right: 0rem;
   }
 }
 
